# simple_cmake_example

./: CMakeLists.txt  README.md  mycode.cpp
